--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             </div>
         </section>
 
+        <div class="illustration-container">
+            <picture>
+                <source srcset="./images/bg-section-top-desktop-1.svg" media="(min-width: 850px)">
+                <img src="./images/bg-section-top-mobile-1.svg" class="curve-top" alt="Curve Top">
+            </picture>
+        </div>
         <section class="section-two">
             <div class="container">
                 <div class="row">
@@ -65,6 +71,12 @@
                 </div>
             </div>
         </section>
+        <div class="illustration-container-bottom">
+            <picture>
+                <source srcset="./images/bg-section-bottom-desktop-1.svg" media="(min-width: 850px)">
+                <img src="./images/bg-section-bottom-mobile-1.svg" class="curve-btm" alt="Curve Bottom">
+            </picture>
+        </div>
 
         <section class="section-three">
             <div class="container">
@@ -82,6 +94,12 @@
             </div>
         </section>
 
+        <div class="illustration-container">
+            <picture>
+                <source srcset="./images/bg-section-top-desktop-2.svg" media="(min-width: 850px)">
+                <img src="./images/bg-section-top-mobile-2.svg" class="curve-top" alt="Curve Top">
+            </picture>
+        </div>
         <section class="section-four">
             <div  class="container">
                 <div  class="row">
@@ -97,6 +115,12 @@
                 </div>
             </div>
         </section>
+        <div class="illustration-container-bottom">
+            <picture>
+                <source srcset="./images/bg-section-bottom-desktop-2.svg" media="(min-width: 850px)">
+                <img src="./images/bg-section-bottom-mobile-2.svg" class="curve-top" alt="Curve Top">
+            </picture>
+        </div>
 
         <section class="section-five">
             <div  class="container">
@@ -108,6 +132,12 @@
         </section>
     </main>
     
+    <div class="illustration-container">
+        <picture>
+            <source srcset="./images/bg-footer-top-desktop.svg" media="(min-width: 850px)">
+            <img src="./images/bg-footer-top-mobile.svg" class="curve-top" alt="Curve Top">
+        </picture>
+    </div>
     <footer class="section-footer">
         <div class="container">
             <div class="row">
@@ -121,7 +151,7 @@
                             <button class="btn-2">Suscribe</button>
                         </form>
                 </div>
-                
+
                 <div class="col">
                     <img src="./images/logo.svg" class="logo-footer" alt="Footer Logo">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
