update images/svg-icons width

--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
                     </div>
 
                     <div class="into-img">
-                        <img src="/images/screen-mockups.svg" class="" alt="Screen Mockup">
+                        <picture>
+                            <source srcset="./images/screen-mockups.svg" media="(min-width: 850px)">
+                            <img class="bg-pattern" src="./images/screen-mockups.svg" width="300" alt="">
+                          </picture>
                     </div>
 
                     <div class="row">
                         <div class="col">
-                            <img src="./images/icon-communities.svg" class="communities" alt="Community svg">
+                            <img src="./images/icon-communities.svg" class="communities-icon" alt="Community svg">
                             <h2>1.4k+</h2>
                             <p>Communities Formed</p>
                         </div>
 
                     <div class="col">
-                        <img src="./images/icon-messages.svg" class="communities" alt="Community svg">
+                        <img src="./images/icon-messages.svg" class="message-icon" alt="Community svg">
                         <h2>2.7m+</h2>
                         <p>Messages Sent</p>
                     </div>
@@ -60,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img src="images/illustration-grow-together.svg" class="" alt="Grow together">
+                        <img src="images/illustration-grow-together.svg" width="245" class="grow-img" alt="Grow together">
                     </div>
 
                     <div class="col">
@@ -82,7 +85,7 @@
             <div class="container">
                 <div  class="row">
                     <div class="col">
-                        <img src="./images/illustration-flowing-conversation.svg" class="" alt="Flowing">
+                        <img src="./images/illustration-flowing-conversation.svg" width="245" class="flowing-img" alt="Flowing">
                     </div>
 
                     <div class="col">
@@ -104,7 +107,7 @@
             <div  class="container">
                 <div  class="row">
                     <div class="col">
-                        <img src="./images/illustration-your-users.svg" class="" alt="Flowing">
+                        <img src="./images/illustration-your-users.svg" width="245" class="users-img" alt="Flowing">
                     </div>
 
                     <div class="col">
@@ -153,7 +156,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="./images/logo.svg" class="logo-footer" alt="Footer Logo">
+                    <img src="./images/logo.svg" class="logo-icon" alt="Footer Logo">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
                         vestibulum a, ultrices quis sem.</p>
 
