update paragraph class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                     <div class="intro-texts">
                         <h1>Build The Community Your Fans Will Love</h1>
-                        <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
+                        <p class="para1">Huddle re-imagines the way we build communities. You have a voice, but so does 
                             your audience. Create connections with your users as you engage in genuine discussion.</p>
                         <button class="btn-1">Get Started For Free</button>
                     </div>
@@ -41,13 +41,13 @@
                         <div class="col">
                             <img src="./images/icon-communities.svg" class="communities-icon" alt="Community svg">
                             <h2>1.4k+</h2>
-                            <p>Communities Formed</p>
+                            <p class="para1">Communities Formed</p>
                         </div>
 
                     <div class="col">
                         <img src="./images/icon-messages.svg" class="message-icon" alt="Community svg">
                         <h2>2.7m+</h2>
-                        <p>Messages Sent</p>
+                        <p class="para1">Messages Sent</p>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
 
                     <div class="col">
                         <h3>Grow Together</h3>
-                        <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+                        <p class="para2">Generate meaningful discussions with your audience and build a strong, loyal community. 
                             Think of the insightful conversations you miss out on with a feedback form.</p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
 
                     <div class="col">
                         <h3>Flowing Conversations</h3>
-                        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+                        <p class="para2">You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
                             just-in-time loading for a more natural flow.</p>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
 
                     <div class="col">
                         <h3>Your Users</h3>
-                        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
+                        <p class="para2">It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
                             once signed in to your app, your users can start chatting immediately.</p>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="col">
                     <h4>Newsletter</h4>
-                    <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We'll never 
+                    <p class="para2">To recieve tips on how to grow your community, sign up to our weekly newsletter. We'll never 
                         send you spam or pass on your email address</p>
 
                         <form class="footer-form">
@@ -157,7 +157,7 @@
 
                 <div class="col">
                     <img src="./images/logo.svg" class="logo-icon" alt="Footer Logo">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
+                    <p class="para2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
                         vestibulum a, ultrices quis sem.</p>
 
                     <div>
