--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <button class="btn-1">Get Started For Free</button>
                     </div>
 
-                    <div class="into-img">
+                    <div class="intro-img">
                         <picture>
                             <source srcset="./images/screen-mockups.svg" media="(min-width: 850px)">
                             <img class="bg-pattern" src="./images/screen-mockups.svg" width="300" alt="">
@@ -38,16 +38,16 @@
                     </div>
 
                     <div class="row">
-                        <div class="col">
+                        <div class="col text-icons">
                             <img src="./images/icon-communities.svg" class="communities-icon" alt="Community svg">
                             <h2>1.4k+</h2>
-                            <p class="para1">Communities Formed</p>
+                            <p class="para2">Communities Formed</p>
                         </div>
 
-                    <div class="col">
+                    <div class="col text-icons">
                         <img src="./images/icon-messages.svg" class="message-icon" alt="Community svg">
                         <h2>2.7m+</h2>
-                        <p class="para1">Messages Sent</p>
+                        <p class="para2">Messages Sent</p>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
 
                     <div class="col">
                         <h3>Grow Together</h3>
-                        <p class="para2">Generate meaningful discussions with your audience and build a strong, loyal community. 
+                        <p class="para3">Generate meaningful discussions with your audience and build a strong, loyal community. 
                             Think of the insightful conversations you miss out on with a feedback form.</p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
 
                     <div class="col">
                         <h3>Flowing Conversations</h3>
-                        <p class="para2">You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+                        <p class="para3">You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
                             just-in-time loading for a more natural flow.</p>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
 
                     <div class="col">
                         <h3>Your Users</h3>
-                        <p class="para2">It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
+                        <p class="para3">It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
                             once signed in to your app, your users can start chatting immediately.</p>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
         <div class="illustration-container-bottom">
             <picture>
                 <source srcset="./images/bg-section-bottom-desktop-2.svg" media="(min-width: 850px)">
-                <img src="./images/bg-section-bottom-mobile-2.svg" class="curve-top" alt="Curve Top">
+                <img src="./images/bg-section-bottom-mobile-2.svg" class="curve-btm" alt="Curve Bottom">
             </picture>
         </div>
 
@@ -129,7 +129,7 @@
             <div  class="container">
                 <div  class="row">
                     <h1>Ready To Build Your Community?</h1>
-                    <button class="btn">Get Started For Free</button>
+                    <button class="btn-1">Get Started For Free</button>
                 </div>
             </div>
         </section>
@@ -144,28 +144,26 @@
     <footer class="section-footer">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col newsletter">
                     <h4>Newsletter</h4>
-                    <p class="para2">To recieve tips on how to grow your community, sign up to our weekly newsletter. We'll never 
+                    <p class="para4">To recieve tips on how to grow your community, sign up to our weekly newsletter. We'll never 
                         send you spam or pass on your email address</p>
 
                         <form class="footer-form">
                             <input id="email" type="email">
-                            <button class="btn-2">Suscribe</button>
+                            <button class="btn-2">Subscribe</button>
                         </form>
                 </div>
 
                 <div class="col">
                     <img src="./images/logo.svg" class="logo-icon" alt="Footer Logo">
-                    <p class="para2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
+                    <p class="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
                         vestibulum a, ultrices quis sem.</p>
 
-                    <div>
-                        <ul>
-                        <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M-3-3h24v24H-3z"/><path d="M17 12.5c-1.2 0-2.4-.2-3.6-.6-.3-.1-.7 0-1 .2l-2.2 2.2c-2.8-1.4-5.1-3.8-6.6-6.6l2.2-2.2c.3-.3.4-.7.2-1-.3-1.1-.5-2.3-.5-3.5 0-.6-.4-1-1-1H1C.4 0 0 .4 0 1c0 9.4 7.6 17 17 17 .6 0 1-.4 1-1v-3.5c0-.6-.4-1-1-1zM16 9h2c0-5-4-9-9-9v2c3.9 0 7 3.1 7 7zm-4 0h2c0-2.8-2.2-5-5-5v2c1.7 0 3 1.3 3 3z" fill="#FFF"/></g></svg><p>Phone: +1-543-123-4567</p>
-                        <svg width="20" height="16" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M-2-4h24v24H-2z"/><path d="M18 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zm0 14h-2V5.2L10 9 4 5.2V14H2V2h1.2L10 6.2 16.8 2H18v12z" fill="#FFF"/></g></svg><p>example@huddle.com</p>
+                        <ul class="footer-svg">
+                        <li><svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M-3-3h24v24H-3z"/><path d="M17 12.5c-1.2 0-2.4-.2-3.6-.6-.3-.1-.7 0-1 .2l-2.2 2.2c-2.8-1.4-5.1-3.8-6.6-6.6l2.2-2.2c.3-.3.4-.7.2-1-.3-1.1-.5-2.3-.5-3.5 0-.6-.4-1-1-1H1C.4 0 0 .4 0 1c0 9.4 7.6 17 17 17 .6 0 1-.4 1-1v-3.5c0-.6-.4-1-1-1zM16 9h2c0-5-4-9-9-9v2c3.9 0 7 3.1 7 7zm-4 0h2c0-2.8-2.2-5-5-5v2c1.7 0 3 1.3 3 3z" fill="#FFF"/></g></svg>Phone: +1-543-123-4567</li>
+                        <li><svg width="20" height="16" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M-2-4h24v24H-2z"/><path d="M18 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zm0 14h-2V5.2L10 9 4 5.2V14H2V2h1.2L10 6.2 16.8 2H18v12z" fill="#FFF"/></g></svg>ample@huddle.com</li>
                         </ul>
-                    </div>
                 </div>
 
                 <div class="col social-icons">
