--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 
                         <form class="footer-form">
                             <input id="email" type="email">
+                            <p class="error-message">Check your email please</p>
                             <button class="btn-2">Subscribe</button>
                         </form>
                 </div>
