--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <img src="./images/illustration-flowing-conversation.svg" class="flowing-img" alt="Flowing">
                     </div>
 
-                    <div class="col">
+                    <div class="col flowing-txt">
                         <h3>Flowing Conversations</h3>
                         <p class="para3">You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
                             just-in-time loading for a more natural flow.</p>
