--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <section class="section-two">
             <div class="container">
-                <div class="row rows">
+                <div class="row rows two-cols">
                     <div class="col">
                         <img src="images/illustration-grow-together.svg" class="grow-img" alt="Grow together">
                     </div>
@@ -82,7 +82,7 @@
 
         <section class="section-three">
             <div class="container">
-                <div  class="row">
+                <div  class="row two-cols">
                     <div class="col">
                         <img src="./images/illustration-flowing-conversation.svg" class="flowing-img" alt="Flowing">
                     </div>
@@ -104,7 +104,7 @@
         </div>
         <section class="section-four">
             <div  class="container">
-                <div  class="row rows">
+                <div  class="row rows two-cols">
                     <div class="col">
                         <img src="./images/illustration-your-users.svg" class="users-img" alt="Flowing">
                     </div>
