--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                         send you spam or pass on your email address</p>
 
                         <form class="footer-form">
+                            <label for="email"></label>
                             <input id="email" type="email">
                             <p class="error-message">Check your email please</p>
                             <button class="btn-2">Subscribe</button>
@@ -170,9 +171,9 @@
 
                 <div class="col social-icons">
                     <ul>
-                    <li><i class="fab fa-facebook-square" aria-label="facebook"></i></li>
-                    <li><i class="fab fa-instagram" aria-label="instagram"></i></li>
-                    <li><i class="fab fa-twitter-square" aria-label="twitter"></i></li>
+                    <li><a href="#"  aria-label="facebook"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="#" aria-label="instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" aria-label="twitter"><i class="fab fa-twitter-square"></i></a></li>
                 </ul>
                 </div>
                 </div>
